<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    >
    <TextView
        android:id="@+id/txtDispNomRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="25dp"
        android:textColor="@color/text"
        />
    <TextView
        android:id="@+id/txtDispDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/text"
        android:layout_below="@id/txtDispNomRestaurant"/>
    <TextView
        android:id="@+id/txtDispNoteService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDispDate"
        android:text="@string/note_service"
        android:textColor="@color/text"/>
    <TextView
        android:id="@+id/NoteService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtDispNoteService"
        android:layout_alignBottom="@id/txtDispNoteService"
        android:textColor="@color/text"/>
    <TextView
        android:id="@+id/txtDispNoteDeco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_decoration"
        android:textColor="@color/text"
        android:layout_below="@id/txtDispNoteService"/>
    <TextView
        android:id="@+id/NoteDeco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:layout_alignBottom="@id/txtDispNoteDeco"
        android:layout_toRightOf="@id/txtDispNoteDeco"/>
    <TextView
        android:id="@+id/txtDispDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zone_description"
        android:textColor="@color/text"
        android:layout_below="@id/NoteDeco"
        />
    <TextView
        android:id="@+id/DispDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtDispDescription"
        android:layout_toRightOf="@id/txtDispDescription"/>
    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_delete"
        android:layout_alignParentRight="true"
        android:background="@color/background"/>
    <ImageButton
        android:id="@+id/btnEdit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_edit"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/btnDelete"
        android:background="@color/background"/>
    <ImageButton
        android:id="@+id/btnShare"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/background"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/btnEdit"
        android:src="@drawable/ic_share"/>
    <TextView
        android:id="@+id/dispId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/background"/>
</RelativeLayout>